Hover - picture becomes colorful

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <!-- The main page -->
 	<section id="cover">
-		<div id="cover-background"><img class="img-scaled-h" src="assets/background.jpg" /></div>
+		<div id="cover-background">
+			<img class="img-scaled-h" src="assets/Background.jpg" />
+			<img class="img-hover" src="assets/haas-721.jpg"/>
+		</div>
 		<div id="cover-overlay"></div>
 		<div id="cover-content">
 			<div id="cover-title">HAKOB KARAPETYAN</div>
@@ -28,17 +31,32 @@
 		</div>
 	</section>
 
-<!-- Section on Life -->
+<!-- My life catalysts -->
 	<section id="Life" class="slide">
 		<div class="container">
 			<div class="slide-thumbnaillife">
 				<div class="overlay">
-					Hello
+					<div class="overlay-text">
+						Was Born
+					</div>
 				</div>
-				<img class="img-scaled-wh" src="assets/newborn.jpg" />
-			</div>
-			<div class="slide-thumbnaillife"><img class="img-scaled-wh" src="assets/plane.jpg" /></div>
-			<div class="slide-thumbnaillife"><img class="img-scaled-wh" src="assets/graduating.jpg" /></div>
+				<img class="img-scaled-wh" src="assets/newborn.jpg" /></div>
+
+			<div class="slide-thumbnaillife">
+				<div class="overlay">
+					<div class="overlay-text">
+						Moved to the US
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/plane.jpg" /></div>
+
+			<div class="slide-thumbnaillife">
+				<div class="overlay">
+					<div class="overlay-text">
+						Graduated
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/graduating.jpg" /></div>
 			<div class="slide-title">Catalysts in My Life</div>
 		</div>
 	</section>
@@ -46,20 +64,76 @@
 <!-- Section on Education and Experience -->
 	<section id="Experience" class="slide">
 		<div class="container">
-			<div class="slide-thumbnailexp"><img class="img-scaled-wh" src="assets/haas.jpg" /></div>
-			<div class="slide-thumbnailexp"><img class="img-scaled-wh" src="assets/entrepreneur.jpg" /></div>
-			<div class="slide-thumbnailexp"><img class="img-scaled-wh" src="assets/corporate.jpg" /></div>
+			<div class="slide-thumbnailexp">
+				<div class="overlay">
+					<div class="overlay-text">
+						Read More
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/haas.jpg" />
+			</div>
+
+			<div class="slide-thumbnailexp">
+				<div class="overlay">
+					<div class="overlay-text">
+						Read More
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/entrepreneur.jpg" />
+			</div>
+
+			<div class="slide-thumbnailexp">
+				<div class="overlay">
+					<div class="overlay-text">
+						Read More
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/corporate.jpg" />
+			</div>
 			<div class="slide-title">Education and Work Experience</div>
 		</div>
 
 <!-- Section on Social Media -->
 	<section id="Connect" class="slide">
 		<div class="container">
-			<div class="slide-thumbnailconnect"><img class="img-scaled-wh" src="assets/facebook.jpg" /></div>
-			<div class="slide-thumbnailconnect"><img class="img-scaled-wh" src="assets/linkedin.jpg" /></div>
-			<div class="slide-thumbnailconnect"><img class="img-scaled-wh" src="assets/twitter.jpg" /></div>
-			<div class="slide-thumbnailconnect"><img class="img-scaled-wh" src="assets/insta.jpg" /></div>
-			<div class="slide-thumbnailconnect"><img class="img-scaled-wh" src="assets/snapchat.jpg" /></div>
+			<div class="slide-thumbnailconnect">
+				<div class="overlaysocial">
+					<div class="overlay-text">
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/facebook.jpg" /></div>
+
+			<div class="slide-thumbnailconnect">
+				<div class="overlaysocial">
+					<div class="overlay-text">
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/linkedin.jpg" />
+			</div>
+
+			<div class="slide-thumbnailconnect">
+				<div class="overlaysocial">
+					<div class="overlay-text">
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/twitter.jpg" />
+			</div>
+
+			<div class="slide-thumbnailconnect">
+				<div class="overlaysocial">
+					<div class="overlay-text">
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/insta.jpg" />
+			</div>
+
+			<div class="slide-thumbnailconnect">
+				<div class="overlaysocial">
+					<div class="overlay-text">
+					</div>
+				</div>
+				<img class="img-scaled-wh" src="assets/snapchat.jpg" />
+			</div>
 			<div class="slide-titleconnect">Let's Connect!</div>
 		</div>
 </body>
