Added "contact me"

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<div class="cover-nav-item">Experience</div>
 				<div class="cover-nav-item">Life</div>
 				<div class="cover-nav-item">Home</div>
+				<div class="cover-nav-item">Contact Me</div>
 				<div class="clear"></div>
 			</div>
 		</div>
